servicemesh/sm-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: lb50-gwy
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: tcp
      protocol: TCP
    hosts:
    - lb50-test.apps.ocp.pebcac.org
