servicemesh/service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: lb50
spec:
  hosts:
  - "*"
  gateways:
  - lb50-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: firstservice
        port:
          number: 8080
