servicemesh/sm-virtualsvc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-svc
spec:
  hosts:
  - lb50-test-apps.ocp.pebcac.org
  gateways:
    - lb50-gwy
